<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/white">

    <TextView
        android:text="@string/text_home_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:textSize="18sp"
        />

    <ImageView
        android:id="@+id/kombu_tae"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="50dp"
        android:background="@drawable/kombu_tae"
        android:contentDescription="@string/text_kombutea" />

    <Button
        android:id="@+id/button_order"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rct_blck_rnd_drkgry"
        android:text="@string/text_order"
        android:textColor="@android:color/white" />


</LinearLayout>