<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_gift_title"
            android:gravity="center"
            android:lineHeight="30dp"
            android:textSize="20dp"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="30dp"
        android:paddingHorizontal="50dp"
        android:layout_margin="10dp"
        android:stretchColumns="1"
        android:background="@drawable/btn_rct_wht_gry"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_my_code"
                android:textColor="@android:color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AISD90"
                android:gravity="right"
                android:textColor="@android:color/black"
                />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_my_points"
                android:textColor="@android:color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0원"
                android:gravity="right"
                android:textColor="@android:color/black"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/text_forward_code"
                android:gravity="center"
                android:layout_span="2"
                android:background="@drawable/btn_rct_blck_rnd_drkgry"
                android:textColor="@android:color/white"

                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/text_enter_code"
                android:gravity="center"
                android:layout_span="2"
                android:background="@drawable/btn_rct_lhtgry"
                />
        </TableRow>

    </TableLayout>

</LinearLayout>